# pycommute-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
scripts/: demo_proyecto.py  demo_weather.py  verificar_entorno.py
src/pycommute_ai/: __init__.py  config.py  weather.py
src/pycommute_ai/adapters/: __init__.py  cache.py  fallback_ai.py  gemini.py  ollama_adapter.py  route.py  weather.py
src/pycommute_ai/api/: dependencies.py  main.py  schemas.py
src/pycommute_ai/api/routers/: cities.py  commute.py  health.py
src/pycommute_ai/core/: __init__.py  history.py  models.py  ports.py  ranking.py
src/pycommute_ai/services/: __init__.py  commute.py
tests/: conftest.py  test_weather.py
tests/fixtures/: gemini_response.json  route_valencia.json  weather_valencia.json
tests/integration/: test_api.py
tests/unit/: test_cache.py  test_commute.py  test_config.py  test_fallback_ai.py  test_gemini.py  test_history.py  test_models.py  test_ollama.py  test_ranking.py  test_route.py  test_weather.py
