[project]
name = "pycommute-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "alpm", email = "qixiang.zhou@ocaso.es" }
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]
