[project]
name = "pycommute-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "alpm", email = "qixiang.zhou@ocaso.es" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "tenacity>=9.1.4",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]
