[project]
name = "pycommute-ai"
version = "0.1.0"
description = "Asesor de movilidad inteligente — curso Python Pro"
readme = "README.md"
authors = [
    { name = "Qixiang Zhou", email = "qixiang.1211@gmail.es" }
]
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.13.0",
    "fastapi>=0.135.3",
    "google-genai>=1.72.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "tenacity>=9.1.4",
    "uvicorn>=0.44.0",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "email-validator>=2.3.0",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.10",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/pycommute_ai"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
